tests/errors/tcl_error_sourced.tcl
proc c args {
    error "Error!"

}
test fehler
